add test for EvaluationService